--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.dt-layout-start {
+    display: none;
+}
+
+.dt-layout-end {
+    display: none;
+}
